alaska: update maps to hopefully prevent cropping on desktop

--- a/src/css/footer.less
+++ b/src/css/footer.less
@@ -46,7 +46,7 @@ footer.closing {
       justify-content: center;
 
       @media @mobile-above {
-        max-width: 1500px;
+        max-width: 1000px;
       }
 
       @media @tablet {
